# src/main/java/com/codeops/dto/request/MfaSetupRequest.java
@@ -1,0 +1,7 @@
+package com.codeops.dto.request;
+
+import jakarta.validation.constraints.NotBlank;
+
+public record MfaSetupRequest(
+        @NotBlank String password
+) {}
